# SemanticSingleViewReconstruction

./: .gitignore  README.md  SemanticSVR.yaml  download_models.py  map_image_to_correct_opening_angle.py
data_generation/: README.md
data_generation/LossCalculator/: Array3D.cc  Array3D.h  CMakeLists.txt  FilterClasses.h  Hdf5ReaderAndWriter.cc  Hdf5ReaderAndWriter.h  Image.h  LossValueType.h  README.md  create_all_loss_maps.py  main.cpp
data_generation/SDFGen/: CMakeLists.txt  README.md  generate_sdf_files.py  main.cpp
data_generation/color_images/: load_3d_front.py  render_all_scenes.py  render_script.py
data_generation/tf_record_generation/: README.md  tf_records_for_scene_reconstruction.py  tf_records_for_surface_normals.py  tf_records_for_tsdf_compression.py
data_generation/tsdf_compression/: README.md  convert_all_files.py  create_database.py
data_generation/tsdf_compression/Blocker/: CMakeLists.txt  main.cpp
data_generation/tsdf_compression/Blocker/src/: Array3D.h  Blocker.cpp  Blocker.h  Hdf5ReaderAndWriter.h  Point.h  StopWatch.cc  StopWatch.h
svr/: README.md  all_in_one_client.py  all_in_one_server.py
svr/crisscross/: README.md  __init__.py  client.py  connection_interface.py  message.py  server.py
svr/implicit_tsdf_decoder/: README.md  __init__.py  implicit_tsdf_client.py  implicit_tsdf_decoder_server.py  train.py
svr/scene_reconstruction/: README.md  scene_reconstruction_client.py  scene_reconstruction_server.py  train.py
svr/tsdf_renderer/: visualize_tsdf.py
svr/u_net_normal/: README.md  normal_reconstruction_client.py  train.py  (+1 more)
(+105 files in other folders)
